Kubernetes/Nginx/gateway-api/es-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: es-proxy
  namespace: logging
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: es-proxy
  template:
    metadata:
      labels:
        app: es-proxy
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - name: es
              containerPort: 8080   # 對應 ES proxy
            - name: kibana
              containerPort: 8081   # 對應 Kibana proxy
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: nginx-conf
          configMap:
            name: es-proxy-conf
---
apiVersion: v1
kind: Service
metadata:
  name: es-proxy
  namespace: logging
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  ports:
    - name: es
      port: 9200        
      targetPort: 8080   
    - name: kibana
      port: 5601         
      targetPort: 8081   
  selector:
    app: es-proxy
