Kubernetes/Nginx/gateway-api/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: web-gateway
  namespace: default
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  gatewayClassName: nginx
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: www.hrscyj.uk
      tls:
        mode: Terminate
        certificateRefs:
          - name: web-tls
